# frust

./: .gitignore  .pre-commit-config.yaml  .woodpecker.yml  CLAUDE.md  Cargo.toml  Database.md  Dockerfile  README.md  Roadmap.md  bacon.toml  cliff.toml  config.old.yaml  deny.toml  flake.nix  justfile  my-config.yaml  renovate.json  rust-toolchain.toml  rustfmt.toml  schema.sqlite.sql
.forgejo/: PULL_REQUEST_TEMPLATE.md
.forgejo/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yaml  release.yaml  release.yml  rust-clippy.yml  rust.yaml
benches/: bench.rs
cli/: Cargo.toml  README.md  config.yaml
cli/src/: config.rs  main.rs  model.rs  processing.rs
examples/: basic.rs
pages/: home-anonymous.html  index.html
sql/: schema.sql
src/: auth.rs  cli.rs  command.rs  config.rs  db.rs  error.rs  export.rs  main.rs  messages.rs  model.rs  opml.rs  processing.rs  routes.rs  routes_account.rs  routes_folder.rs  scheduler.rs  storage.rs  utils.rs
src/db/: account.rs  article.rs  feed.rs  folder.rs  mod.rs
src/export/: atom.rs  epub.rs  json.rs  markdown.rs  mod.rs  rss.rs  zip.rs
src/modules/: feed.rs  mod.rs
src/processing/: content.rs  convert.rs  fetch.rs  filter.rs  media.rs  mod.rs
src/routes/: account.rs  feed.rs  folder.rs  mod.rs
static/: main.js  main.min.css  main.min.css.map  main.min.js  mdi.min.css
templates/: header.html  home-anonymous.html  index.html
web_server/: .env  Cargo.toml  Database.md  Dockerfile  README.md  URLs.md  minify.sh  schema.sqlite.sql
web_server/pages/: index.html  user.html
web_server/src/: auth.rs  config.rs  main.rs  messages.rs  model.rs  scheduler.rs  utils.rs
web_server/src/db/: account.rs  feed.rs  folder.rs  mod.rs
web_server/src/modules/: feed.rs  feeds_finder.rs  mod.rs
web_server/src/routes/: account.rs  feed.rs  mod.rs
web_server/static/: main.js  main.min.js  main.min.scss  mdi.min.css
