[package]
name = "frust"
version = "0.1.0"
authors = ["Sébastien LUNDI <slundi@gmail.com>"]
edition = "2021"
description = "Lightweight RSS aggregator"
readme = "README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
config = { version = "0.13", features = ["default"] }
dotenv = "0.15"
simple_logger = "4"
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.21"
rusqlite = { version = "0.28", features = ["chrono"]}
actix-web = { version = "4", features = ["cookies"] }
actix-files = "0.6"
rand = { version = "0.8", features = [ "std_rng" ] }
static-files = "0.2"
bcrypt = "0.13"
#jsonwebtoken = "8" or boringauth = "0.9"
harsh = "0.2"
sailfish = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opml = "1.1"
feed-rs = "1.2"
ureq = { version = "2", features = ["brotli", "charset"] }
