[package]
name = "frust"
authors = ["Sébastien LUNDI <slundi@ikmail.com>"]
version = "0.1.0"
edition = "2021"
description = "CLI RSS aggregator"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://codeberg.org/slundi/frust"
categories = ["command-line-utilities", "data-structures"]
keywords = ["cli", "rss", "atom", "feed", "aggregator", "feeds"]
publish = true

[dependencies]
tokio = { version = "1.43", features = ["full"] }
yaml-rust = "0.4"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
linked-hash-map = "0.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
slug = "0.1"
url = "2.3"
regex = "1"
futures = "0.3"
reqwest = "0.12"
feed-rs = "2.3"
chrono = "0.4"
scraper = "0.22"

[dev-dependencies]
